<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="domoticz_url" translatable="false">http://www.domoticz.com/</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-2210179934394995/9519963928</string>
    <string name="premium_category">Buy premium!</string>
    <string name="premium_title">Get the premium version!</string>
    <string name="restore_title">Restore subscriptions</string>
    <string name="premium_feature">is a premium feature, please buy the paid version to support the developers!</string>
    <string name="old_version">Get the latest version!</string>
    <string name="old_version_description">We are migrating to only one Domoticz Android app.\n\nThis version can still be used with all the premium features, but wil not receive any updates anymore in the future.\n\nYou can export and import your settings via the settings menu.</string>
    <string name="short_description">Domoticz home automation control and monitoring</string>
    <string name="long_description">Control and monitor devices at home (lights, switches, sensors, energy data and more) using the Domoticz home automation system. Automate devices and access them remotely from your Android device.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="changelog">Changelog</string>
    <string name="button_state_on">On</string>
    <string name="button_state_off">Off</string>
    <string name="button_state_closed">Closed</string>
    <string name="button_state_open">Open</string>
    <string name="button_state_lock">Lock</string>
    <string name="button_state_unlock">Unlock</string>
    <string name="button_status_log">Log</string>
    <string name="button_status_day">Day</string>
    <string name="button_status_week">Week</string>
    <string name="button_status_month">Month</string>
    <string name="button_status_year">Year</string>
    <string name="button_status_graph">Graph</string>
    <string name="no_data_for_range">No data available for this range</string>
    <string name="set_threshold">Set threshold</string>
    <string name="clear_threshold">Clear threshold</string>
    <string name="action_share">Share</string>
    <string name="compare_previous">Compare prev.</string>
    <string name="threshold_hint">Enter threshold value (0 to clear)</string>
    <string name="threshold_label">Threshold</string>
    <string name="button_status_timer">Timer</string>
    <string name="button_status_notifications">Notifications</string>
    <string name="button_color">Color</string>
    <string name="button_arm">Arm</string>
    <string name="button_disarm">Disarm</string>
    <string name="button_state_full_light">Full light</string>
    <string name="button_state_night">Night light</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="now">Now</string>
    <string name="astrTwilightStart">Astronomical twilight start</string>
    <string name="astrTwilightEnd">Astronomical twilight end</string>
    <string name="civTwilightStart">Civil twilight start</string>
    <string name="civTwilightEnd">Civil twilight end</string>
    <string name="nautTwilightStart">Nautical twilight start</string>
    <string name="nautTwilightEnd">Nautical twilight end</string>
    <string name="last_update">Last seen</string>
    <string name="signal_level">Signal level</string>
    <string name="battery_level">Battery level</string>
    <string name="data">Data</string>
    <string name="set_point_min">Set point min value</string>
    <string name="set_point_min_description">Min temperature that you can set for your thermostat</string>
    <string name="set_point_max">Set point max value</string>
    <string name="set_point_max_description">Max temperature that you can set for your thermostat</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="auto_refresh_time">Refresh timer</string>
    <string name="set_auto_refresh_time">Set a specific timer for the auto refresh in seconds.</string>
    <string name="action_switch_server">Switch Server</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_qrcode_scan">Scan QR Code</string>
    <string name="action_speech">Speech Recognition</string>
    <string name="action_graph">Graph</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="permission_prefs_title">Permissions</string>
    <string name="permission_config">Configure the Permissions for this app</string>
    <string name="title_scenes">Scenes</string>
    <string name="category_generic">Generic</string>
    <string name="category_wear">Android Wear</string>
    <string name="category_server">Server</string>
    <string name="category_geofencing">Geofencing</string>
    <string name="category_info">Information</string>
    <string name="category_advanced">Advanced</string>
    <string name="category_language">Language</string>
    <string name="category_talk_back">Talk Back</string>
    <string name="category_notification">Notifications</string>
    <string name="category_theme">Theme</string>
    <string name="category_nfc">NFC Connections</string>
    <string name="category_startup_security">Security</string>
    <string name="category_QRCode">QR Code</string>
    <string name="category_bluetooth">Bluetooth</string>
    <string name="category_Speech">Speech</string>
    <string name="startup_screen">Startup screen</string>
    <string name="enable_items">Enable/Disable Items</string>
    <string name="sort_server_title">Sorting</string>
    <string name="sort_server_on">Sort devices like sorted on the server</string>
    <string name="sort_custom_on">Custom sorting, drag and drop devices to sort them</string>
    <string name="sort_lock_server_title">Lock</string>
    <string name="sort_lock_custom_on">Lock the current custom sorting (disable drag/drop)</string>
    <string name="extra_data_title">Extra data on dashboard</string>
    <string name="show_extra_data_on">Show extra data on dashboard</string>
    <string name="show_extra_data_off">Hide extra data on dashboard</string>
    <string name="always_on_title">Wake Lock</string>
    <string name="always_on_on">Lock the screen always On</string>
    <string name="always_on_off">Don\'t lock the screen to always On</string>
    <string name="always_auto_refresh">Auto Refresh</string>
    <string name="always_auto_refresh_on">Refresh the device state every couple of seconds</string>
    <string name="always_auto_refresh_off">Don\'t refresh the device state every couple of seconds</string>
    <string name="switch_buttons_title">Switches</string>
    <string name="switch_buttons_on">Show switches with on/off switch</string>
    <string name="switch_buttons_off">Show switches with on/off buttons</string>
    <string name="dashboard_list_title">Dashboard Grid</string>
    <string name="show_dashboard_list_on">Show dashboard as list</string>
    <string name="show_dashboard_list_off">Show dashboard as grid</string>
    <string name="dashboard_clock">Clock</string>
    <string name="show_dashboard_clock">Show a clock on the dashboard</string>
    <string name="enable_wear_select">Android Wear custom items</string>
    <string name="custom_wear_select">Select Wear switches</string>
    <string name="custom_wear_select_desc">Select which switches you like to see on your Android Wear device</string>
    <string name="wear_custom_on">Enable Android Wear custom items</string>
    <string name="wear_custom_off">Disable Android Wear custom items</string>
    <string name="geofencing_configure">Configure Geofencing</string>
    <string name="config_theme">Set Theme</string>
    <string name="set_talk_back_on">Let Domoticz talk back to you</string>
    <string name="set_talk_back_off">Turn talk back off</string>
    <string name="server_settings">Server connection settings</string>
    <string name="server_force_fetch_config">Fetch server configuration</string>
    <string name="nfc_settings">Setup NFC Connections</string>
    <string name="speech_settings">Setup Speech Commands</string>
    <string name="multi_server">Multi Server</string>
    <string name="enable_nfc">Enable NFC</string>
    <string name="enable_speech">Enable Speech Recognition</string>
    <string name="export_settings">Export settings</string>
    <string name="reset_settings">Reset all app settings (WARNING!!)</string>
    <string name="import_settings">Import settings</string>
    <string name="multi_server_settings">Enable multiple server support</string>
    <string name="nfc_enable_settings">Enable NFC Connections</string>
    <string name="speech_enable_settings">Enable Speech Recognition</string>
    <string name="qrcode_settings">Setup QR Codes</string>
    <string name="enable_qrcode">Enable QR Codes</string>
    <string name="qrcode_enable_settings">Enable QR Codes functionality</string>
    <string name="bluetooth_settings">Setup Bluetooth devices</string>
    <string name="enable_bluetooth">Enable Bluetooth functionality</string>
    <string name="translate_description">You can help make our translations better, and even add new languages to this app via our Crowdin project</string>
    <string name="translate_title">Translations</string>
    <string name="security_settings">Setup Security</string>
    <string name="enable_security">Enable fingerprint protection on startup</string>
    <string name="disable_security">Disable fingerprint protection on startup</string>
    <string name="setup_fingerprints">Setup fingerprints via Android Settings screens</string>
    <string name="notification_settings_id">Google Cloud Messaging ID</string>
    <string name="notification_settings_push">Push your registration id to Domoticz</string>
    <string name="notification_show">Show last couple of Notifications</string>
    <string name="overwrite_notifications_title">Overwrite Notifications</string>
    <string name="overwrite_notifications">Overwrite previous notifications on this device</string>
    <string name="enable_notifications_title">Enable Notifications</string>
    <string name="enable_notifications">Enable notifications on this device</string>
    <string name="notification_history">Notification history</string>
    <string name="notification_vibrate_title">Vibrate</string>
    <string name="notification_vibrate_on">Vibrate when an notification is received</string>
    <string name="notification_vibrate_off">Do not vibrate</string>
    <string name="notification_sound_title">Sound</string>
    <string name="suppress_notifications_select">Select Notifications to Suppress</string>
    <string name="suppress_notifications">Suppress specific Notifications on this device</string>
    <string name="suppress_notifications_title">Suppress Notifications</string>
    <string name="alarm_notifications_select">Select Notifications to Alarm</string>
    <string name="alarm_notifications">Sound an Alarm for specific Notifications</string>
    <string name="clear_notifications">Clean notification logs</string>
    <string name="alarm_notifications_title">Alarm Notifications</string>
    <string name="alarm">Alarm</string>
    <string name="alarmtimer_title">Alarm Timer</string>
    <string name="alarmtimer">Number of seconds to time the alarm</string>
    <string name="default_values">Default values</string>
    <string name="info_version">Version</string>
    <string name="info_about">About Domoticz</string>
    <string name="info_credits">Credits</string>
    <string name="title_switches">Switches</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_weather">Weather</string>
</resources>