<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 Domoticz - Mark Heinis
  ~
  ~  Licensed to the Apache Software Foundation (ASF) under one
  ~  or more contributor license agreements.  See the NOTICE file
  ~  distributed with this work for additional information
  ~  regarding copyright ownership.  The ASF licenses this file
  ~  to you under the Apache License, Version 2.0 (the
  ~  "License"); you may not use this file except in compliance
  ~  with the License.  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing,
  ~  software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~  KIND, either express or implied.  See the License for the
  ~  specific language governing permissions and limitations
  ~  under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customPreference="http://schemas.android.com/apk/res-auto"
    android:key="settingsscreen">

    <androidx.preference.PreferenceCategory
        android:key="premium_category"
        android:title="@string/premium_category">
        <androidx.preference.Preference
            android:key="premium_settings"
            android:title="@string/premium_title" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_generic">
        <androidx.preference.ListPreference
            android:entries="@array/startup_actions"
            android:entryValues="@array/startup_actions"
            android:key="startup_nav"
            android:title="@string/startup_screen" />

        <androidx.preference.MultiSelectListPreference
            android:defaultValue="@array/drawer_actions"
            android:entries="@array/drawer_actions"
            android:entryValues="@array/drawer_actions"
            android:key="show_nav_items"
            android:title="@string/enable_items" />

        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="switchButtons"
            android:summaryOff="@string/switch_buttons_off"
            android:summaryOn="@string/switch_buttons_on"
            android:title="@string/switch_buttons_title" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="alwayson"
            android:summaryOff="@string/always_on_off"
            android:summaryOn="@string/always_on_on"
            android:title="@string/always_on_title" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="autorefresh"
            android:summaryOff="@string/always_auto_refresh_off"
            android:summaryOn="@string/always_auto_refresh_on"
            android:title="@string/always_auto_refresh" />
        <nl.hnogames.domoticz.preference.EditTextIntegerPreference
            android:dependency="autorefresh"
            android:key="autorefreshTimer"
            android:summary="@string/set_auto_refresh_time"
            android:title="@string/auto_refresh_time" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:key="defaultValues"
        android:title="@string/default_values">
        <nl.hnogames.domoticz.preference.EditTextIntegerPreference
            android:key="tempMinValue"
            android:summary="@string/set_point_min_description"
            android:title="@string/set_point_min" />
        <nl.hnogames.domoticz.preference.EditTextIntegerPreference
            android:key="tempMaxValue"
            android:summary="@string/set_point_max_description"
            android:title="@string/set_point_max" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/sort_server_title">
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="sortCustom"
            android:summaryOff="@string/sort_server_on"
            android:summaryOn="@string/sort_custom_on"
            android:title="@string/sort_server_title" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:dependency="sortCustom"
            android:key="lockSortCustom"
            android:summaryOff="@string/sort_lock_custom_on"
            android:summaryOn="@string/sort_lock_custom_on"
            android:title="@string/sort_lock_server_title" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/title_dashboard">
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="extradata"
            android:summaryOff="@string/show_extra_data_off"
            android:summaryOn="@string/show_extra_data_on"
            android:title="@string/extra_data_title" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="dashboardAsList"
            android:summaryOff="@string/show_dashboard_list_on"
            android:summaryOn="@string/show_dashboard_list_off"
            android:title="@string/dashboard_list_title" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="dashboardShowClock"
            android:summaryOff="@string/show_dashboard_clock"
            android:summaryOn="@string/show_dashboard_clock"
            android:title="@string/dashboard_clock" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_wear">
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="enableWearItems"
            android:summaryOff="@string/wear_custom_off"
            android:summaryOn="@string/wear_custom_on"
            android:title="@string/enable_wear_select" />
        <nl.hnogames.domoticz.preference.WearMultiSelectListPreference
            android:defaultValue="@array/empty_array"
            android:dependency="enableWearItems"
            android:dialogTitle="@string/custom_wear_select"
            android:entries="@array/empty_array"
            android:entryValues="@array/empty_array"
            android:key="wearItems"
            android:summary="@string/custom_wear_select_desc"
            android:title="@string/custom_wear_select"
            customPreference:selectAllValuesByDefault="true" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_server">
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="enableMultiServers"
            android:summaryOff="@string/multi_server_settings"
            android:summaryOn="@string/multi_server_settings"
            android:title="@string/multi_server" />
        <androidx.preference.Preference
            android:key="server_settings"
            android:title="@string/server_settings" />
        <androidx.preference.Preference
            android:key="server_force_fetch_config"
            android:title="@string/server_force_fetch_config" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_geofencing">
        <androidx.preference.Preference
            android:key="geo_settings"
            android:title="@string/geofencing_configure" />
    </androidx.preference.PreferenceCategory>

    <!--<androidx.preference.PreferenceCategory android:title="@string/wizard_widgets">
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="enableWidgets"
            android:summaryOff="@string/widget_description"
            android:summaryOn="@string/widget_description"
            android:title="@string/category_widgets"/>
    </androidx.preference.PreferenceCategory>-->

    <androidx.preference.PreferenceCategory android:title="@string/category_nfc">
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="enableNFC"
            android:summaryOff="@string/nfc_enable_settings"
            android:summaryOn="@string/nfc_enable_settings"
            android:title="@string/enable_nfc" />
        <androidx.preference.Preference
            android:dependency="enableNFC"
            android:key="nfc_settings"
            android:title="@string/nfc_settings" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_Speech">
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="enableSpeech"
            android:summaryOff="@string/speech_enable_settings"
            android:summaryOn="@string/speech_enable_settings"
            android:title="@string/enable_speech" />
        <androidx.preference.Preference
            android:dependency="enableSpeech"
            android:key="speech_settings"
            android:title="@string/speech_settings" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_QRCode">
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="enableQRCode"
            android:summaryOff="@string/qrcode_enable_settings"
            android:summaryOn="@string/qrcode_enable_settings"
            android:title="@string/enable_qrcode" />
        <androidx.preference.Preference
            android:dependency="enableQRCode"
            android:key="qrcode_settings"
            android:title="@string/qrcode_settings" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_bluetooth">
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="enableBluetooth"
            android:title="@string/enable_bluetooth" />
        <androidx.preference.Preference
            android:dependency="enableBluetooth"
            android:key="bluetooth_settings"
            android:title="@string/bluetooth_settings" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_startup_security">
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="enableSecurity"
            android:summaryOff="@string/enable_security"
            android:summaryOn="@string/disable_security"
            android:title="@string/security_settings" />
        <androidx.preference.Preference
            android:dependency="enableSecurity"
            android:key="SecuritySettings"
            android:title="@string/setup_fingerprints" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_language">
        <androidx.preference.ListPreference
            android:entries="@array/domoticz_language_entries"
            android:entryValues="@array/domoticz_language_entryValues"
            android:key="displayLanguage"
            android:title="@string/category_language" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="talkBack"
            android:summaryOff="@string/set_talk_back_on"
            android:summaryOn="@string/set_talk_back_off"
            android:title="@string/category_talk_back" />
        <androidx.preference.Preference
            android:key="translate"
            android:summary="@string/translate_description"
            android:title="@string/translate_title" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_theme">
        <androidx.preference.Preference
            android:key="darkTheme"
            android:title="@string/config_theme" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_notification">
        <Preference
            android:key="openNotificationSettings"
            android:title="@string/category_notification" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_advanced">
        <androidx.preference.Preference
            android:key="export_settings"
            android:title="@string/export_settings" />
        <androidx.preference.Preference
            android:key="import_settings"
            android:title="@string/import_settings" />
        <androidx.preference.PreferenceCategory android:title="@string/permission_prefs_title">
            <androidx.preference.Preference
                android:key="permissionssettings"
                android:title="@string/permission_config" />
        </androidx.preference.PreferenceCategory>
        <androidx.preference.Preference
            android:key="reset_settings"
            android:title="@string/reset_settings" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/category_info">
        <androidx.preference.Preference
            android:key="version"
            android:summary="Version 1.0.2"
            android:title="@string/info_version" />
        <androidx.preference.Preference
            android:key="info_about"
            android:title="@string/info_about" />
        <androidx.preference.Preference
            android:key="info_credits"
            android:title="@string/info_credits" />
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>