
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_white_24"
        android:title="@string/filter"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/baseline_sync_white_24"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_speech"
        android:icon="@drawable/baseline_mic_white_24"
        android:orderInCategory="99"
        android:title="@string/action_speech"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/baseline_filter_list_white_24"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_switch_server"
        android:orderInCategory="400"
        android:title="@string/action_switch_server"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scan_qrcode"
        android:orderInCategory="500"
        android:title="@string/action_qrcode_scan"
        android:visible="false"
        app:showAsAction="never" />
</menu>
